# DS-AutoAdvisor

./: .gitignore  01_data_discovery.py  02_stage_testing.py  03_full_pipeline.py  INDUSTRIAL_SETUP.md  QUICK_START.md  README.md  complete_pipeline.py  comprehensive_training_report.json  main.py  plugin_manager.py  pyproject.toml  workspace_overview.py
archive/: 02_stage_testing_old.py  1_inspect_data.py  2_configure_cleaning.py  3_test_pipeline.py  4_run_pipeline.py  PRODUCTION_SETUP.md  STATISTICAL_METHODS_ANALYSIS.md  WORKFLOW_OPTIMIZATION_ANALYSIS.md  complete_pipeline.py  minimal_optimization_plan.py  optimized_pipeline.py  simple_optimization_plan.py  test_cleaning_only.py  workspace_overview.py
cache/: cache_metadata.json
config/: business_kpis.yaml  business_rules.yaml  cleaning_config_template.yaml  feature_flags.yaml  unified_config.yaml  unified_config_v2.yaml  unified_config_v3.yaml
docs/: BUSINESS_FEATURES_GUIDE.md  BUSINESS_IMPLEMENTATION_SUMMARY.md  EVALUATION_METRICS_GUIDE.md  TESTING_SUCCESS_SUMMARY.md  assumption_check_detailed.json  cleaning_log.json  cleaning_log_quoted.json  data_profiling_report.html  data_schema.yaml  mlflow_quick_start.md  v2_implementation_guide.md  v2_upgrade_roadmap.md
evaluation_results/: comprehensive_analysis_report.json
metadata/: pipeline_metadata.db
plugins/: __init__.py  advanced_feature_selector.py
setup/: setup_mlflow.py
src/: interactive_pipeline.py
tests/: test_assumption_checker.py  test_business_features.py  test_evaluator_fixed.py  test_human_checkpoints.py  test_model_recommender.py  (+3 more)
(+75 files in other folders)
