[project]
name = "ds-autoadvisor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pandera>=0.18.0",
    "matplotlib>=3.5.0",
    "missingno>=0.5.2",
    "openai",
    "ydata-profiling>=4.0.0",
    "seaborn>=0.11.0",
    "sweetviz>=2.3.1",
    "scikit-learn",
    "scipy",
    "statsmodels",
    "pycaret>=2.2.2",
    "autogluon>=1.3.1",
    "prefect>=3.4.10",
    "evidently>=0.7.11",
    "mlflow>=3.1.4",
    "streamlit>=1.47.0",
    "plotly>=5.24.1",
    "numpy>=2.0",
    "pandas>=2.2.3",
]
